Updated my profile

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
 <h1>Luna Dorn</h1>
+
+<h3>Profile</h3>
+<ul>
+	<li>Started: 09/02/2023</li>
+	<li>Role: Programming Student</li>
+	<li>Hobbies: Games, Movies, Building Model Kits</li>
+</ul>
